--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
     "modernizr": "^3.9.1",
     "normalize.css": "3.0.2",
     "photoswipe": "^4.1.3",
-    "turbolinks": "^5.2.0",
-    "ansi-regex": "^5.0.1",
-    "nth-check": "^2.0.1",
-    "set-value": "^4.0.1",
-    "glob-parent": "^5.1.2",
-    "is-svg": "^4.2.2"
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
